@@ -1,0 +1,4 @@
+SET UTF-8
+
+SFX X Y 1
+SFX X sierranevada 0 .
